--- a/service-app.yaml
+++ b/service-app.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-app
+  name: app-go-svc
 spec:
   selector:
-    app: app-ws
+    app: app-go
   ports:
     - protocol: TCP
       port: 8080
-      targetPort: 80
+      targetPort: 8080
   type: NodePort
