--- a/ingress-app.yaml
+++ b/ingress-app.yaml
@@ -1,19 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-   name: ingress-app-ws
+   name: ingress-app-go
    annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
    rules:
-   - host: app.ws.com
+   - host: app.go.com
      http:
        paths:
-       - path: /nginx
+       - path: /mandinga
          pathType: Exact
          backend:
            service:
-             name: svc-app
+             name: app-go-svc
              port:
                number: 8080
