--- a/apps.yaml
+++ b/apps.yaml
@@ -19,16 +19,23 @@ spec:
     metadata:
       labels:
         app: app-go
-    spec:
+    spec:      
       containers:
-      - name: app-go
-        image: martooo/app-go:v4
-        volumeMounts:
-        - mountPath: /home
-          name: home
-        ports:
-          - containerPort: 8878     
+        - name: app-go
+          image: martooo/app-go:v4
+          volumeMounts:
+          - mountPath: /home/tincho
+            name: persistent-data
+          ports:
+          - containerPort: 8878      
       volumes:
-       - name: home
-         hostPath: 
-           path: /home/volumen
+      - name: persistent-data
+        persistentVolumeClaim:
+          claimName: pvc-app-go
+
+
+
+
+
+
+
